# whiteboard

./: .gitignore  pyproject.toml
django_whiteboard/: asgi.py  settings.py  urls.py
django_whiteboard/templates/: index.html
web/: index.js.map  package-lock.json  package.json
web/src/: index.ts
