[tool.poetry]
name = "django-whiteboard"
version = "0.1.0"
description = ""
authors = ["Candiceqiqi <lsq199382@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.5"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
